symfony/web/themes/default/css/main.css
/* ... */
/* ================ Hyperlink styles: End ================ */

/* ================ Timesheet styles: Begin ================ */
.timesheet table.table td.right {
    padding-right: 1px;
}

.timesheet table.table td.right.total {
    padding-right: 17px;
}

.timesheet table.table tr.total td.right {
    padding-right: 17px;
}

.timesheet table.table td.right span.commentIcon {
    display: inline-block;
    width: 14px;
    margin-left: 2px;
}
.timesheet .top h3 {
	font-size:18px;
	float:left;
	margin-top: 2px;
}
.editTimesheet .top h3 {
	font-size:18px;
	float:left;
	margin:0 0 10px 0;
}
.timesheet .top select {
	width:200px;
	float:left;
	height:28px;
	margin: 0 5px 0 10px;
}
.timesheet .top button {
	float:left;
	margin:0 0 5px 10px;
}
.timesheet .bottom {
	border-top:1px solid #dedede;
	margin-top:10px;
	padding-top:10px;
}
.timesheet .bottom em {
	font-size:14px;
	float:left;
}
.timesheet .bottom p {
	text-align:right;
}
/*
.editTimesheet input {
	width:40px;
}
*/
input.timeBox {
	width:40px;
}
/*
.editTimesheet input.main-input {
	width:150px;
	float:left;
}
*/
.editTimesheet table.table td {
    vertical-align: top;
}
.editTimesheet .toDelete {
    margin-top: 6px;
}
.editTimesheet input[type="button"], .editTimesheet input[type="submit"] {
    margin-left: 5px;
}
.editTimesheet select, .editTimesheet input, .editTimesheet .checkbox-input {
	float:left;
}
.editTimesheet .checkbox-input {
	clear:both;
	margin:0 0 10px 7px;
}
.editTimesheet .bottom {
	border-top:1px solid #dedede;
	margin-top:10px;
	padding-top:10px;
}
.editTimesheet .bottom .required {
	float:left;
	width:425px;
	color:#a9a9a9;
	font-size:11px;
	text-align:left;
}
.editTimesheet .bottom .required em {
	color:#aa4935;
}
.editTimesheet input.project {
    width: 280px;
}
/* ================ Timesheet styles: End ================ */

/* ================ PIM sidebar styles: Begin ================ */
#sidebar {
	width:202px;
	float:left;
	margin:0 17px 0 0;
	min-height:300px;
}
#sidebar #sidenav {
	margin:19px 0 0 0;
	padding:7px;
	background: #f28c38 url(../images/sidebar-nav-bg.png) repeat-y top right;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
#sidebar #sidenav a {
	color:#fff;
	display:block;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:7px 7px;
	width:174px;
	text-decoration:none;
	margin-bottom:5px;
	border-bottom:1px solid #f19a52;
}
#sidebar #sidenav a:hover {
	background-color:#ce6d1d;
}
#sidebar #sidenav .selected a {
	background-color:#555657;
	color:#fff;
	border-bottom:none;
}
/* ================ PIM sidebar styles: End ================ */

/* ================ PIM styles: Begin ================ */
.pimPane {
	width:97%;
	float:left;
}
.pimPane .head, .pimPane .inner {
	margin-left:220px;
}
.pimPane #profile-pic h1 {
	background: #f3f3f3 url(../images/h1-bg.png) left bottom repeat-x;
	font-size:14px;
	color:#5d5d5d;
	padding:9px 15px;
	line-height:20px;
	border:1px solid #dedede;
	-moz-border-radius-topleft: 3px;
	-webkit-border-top-left-radius: 3px;
	 border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
}
.pimPane #profile-pic img {
	border:1px solid #dedede;
	border-top:none;
}
.pimPane form p.normal {
	float:left;
}
.pimPane form p.required {
	float:left;
	width:425px;
	margin-top:0px;
	color:#a9a9a9;
	font-size:11px;
}
.pimPane form p.required em {
	color:#aa4935;
}
.pimPane form ol li label { /* Used in attachments */
    margin-top: 0; 
}
.pimPane div.imageHolder {
    height: 200px;
    width: 200px;
    text-align: center;
    border: 1px solid #DEDEDE;
    border-top: none;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
	-moz-border-radius-bottomleft: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;    
}
/* ================ PIM styles: End ================ */

/* ================ Personal Details styles: Begin ================ */
div.personalDetails {
    min-width: 1190px;
}

.personalDetails form ol {
    padding-top: 5px;
	margin-bottom:9px;
	position:relative;
}
.personalDetails form ol li {
	/*float:left;*/
	width:435px;
}
.personalDetails form ol li input[type=text] {
	width:192px;
}
.personalDetails form ol li select {
	width:206px;
}
.personalDetails form ol li input.calendar {
	width:165px;
}
.personalDetails form ol li.line {
	float:left;
	width:100%;
}
.personalDetails form ol li.long, .personalDetails form ol li.new {
	clear:both;
}
.personalDetails form ol li.long label {
	margin-top:0px;
}
.personalDetails form ol li label {
    width: 150px;
}
.personalDetails form ol li .block {
	float:left;
	margin-right:12px;
}
.personalDetails form ol li .default {
	color:#5d5d5d;
}
.personalDetails form ol li .defaulttext {
	color:#a4a4a4;
}
.personalDetails form p {
	padding-top: 0px;
}
.personalDetails form ol.fieldsInLine li {
    width: 218px;
    margin-bottom: 0;
}
.personalDetails form ol li label.hasTopFieldHelp {
    margin-top: 23px;
}
/* ================ Personal Details styles: End ================ */

